--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -41,7 +41,7 @@
 
         <footer>
         {% if site.github.is_project_page %}
-          <a href="{{ site.github.repository_url }}" id="view-on-github" class="button">{{ site.title | default: site.github.repository_name }}</a> is hosted <span>on GitHub</span>
+          <a href="{{ site.github.repository_url }}" id="view-on-github" class="">{{ site.title | default: site.github.repository_name }}</a> is hosted <span>on GitHub</span>
         {% endif %}
         </footer>
 
